Updated team names

--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
   </head>
   <body>
      <div class="container">
-       <div class="column">
-         <h1>TEAM A</h1>
+       <div class="column" id="csk">
+         <h1>CSK</h1>
          <h2 class="score" id="score1">0</h2>
          <div class="score-increment">
-          <button id="1" onclick="one()">+1</button>
-          <button id="2" onclick="two()">+2</button>
-          <button id="3" onclick="three()">+3</button>
+          <button  onclick="one()">+1</button>
+          <button  onclick="two()">+2</button>
+          <button  onclick="four()">+4</button>
+          <button  onclick="six()">+6</button>
          </div>
        </div>
-       <div class="column">
-         <h1>TEAM B</h1>
+       <div class="column" id="rcb">
+         <h1>RCB</h1>
           <h2  class="score" id="g-score">0</h2>
           <div class="score-increment">
-           <button id="g1" onclick="one1()">+1</button>
-           <button id="g2" onclick="two2()">+2</button>
-           <button id="g3" onclick="three3()">+3</button>
+           <button  onclick="r_one()">+1</button>
+           <button  onclick="r_two()">+2</button>
+           <button  onclick="r_four()">+4</button>
+           <button  onclick="r_six()">+6</button>
          </div>
        </div>
      </div>
