--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.cdnfonts.com/css/cursed-timer-ulil" rel="stylesheet">
+      <!-- <style>
+        @import url('https://fonts.cdnfonts.com/css/cursed-timer-ulil');
+      </style>           -->
   </head>
   <body>
      <div class="container">
